--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
-    "mysql": "^2.18.1",
+    "nestjs-easyconfig": "^1.7.1",
+    "pg": "^7.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
