--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/swagger": "^4.2.6",
     "nestjs-easyconfig": "^1.7.1",
     "pg": "^7.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
+    "swagger-ui-express": "^4.1.3",
     "typeorm": "^0.2.22"
   },
   "devDependencies": {
